# Jarvis-HEP

./: .gitignore  Birdson.log.2024-03-04  Birdson.log.2024-03-05  Bridson.log.2024-03-23  CLAUDE.md  GammaB.csv  Jarvis  LICENSE  README.md  custom_cmap.py  data.par  data1.csv  dnn.py  finite_diff.py  jhrel  py.py  pyproject.toml  requirements.txt  setup.sh  sys_source.py  test_PMC.py  test_diver.py  test_grid.py  test_pc.py
.github/workflows/: ci.yml
BudingPLOT_VJarvis/: Plot  README.md
BudingPLOT_VJarvis/src/: Buding_Plot.py  Func_lab.py  preference.json
DemoModule/: output.json@{}
benchmarks/: benchmark_async_subprocess.py
dnn/: dnn.ipynb  tpmcmc.ipynb
docs/: HISTORY_SLIMMING_SUMMARY.md  HISTORY_SLIMMING_TODO.md  MAINTENANCE_CONTEXT.md  OBSERVABLE_SCHEMA.md  TODO.md  guide_to_yaml.md  index.md  intro2yaml_format.md  tutorial_eggbox.md
jarvishep/: __init__.py  __main__.py  async_subprocess.py  base.py  benchmark.py  build_requirements.py  client.py  config.py  core.py  dataconvert.py  distributor.py  factory.py  hdf5writer.py  io_manager.py  library.py  log_kv.py  moduleManager.py  modulePool.py  monitor.py  observable_io.py  official_project_library.py  plot.py  project_packager.py  project_scaffold.py  runtime_config.py  sample.py  sample_logger.py  utils.py  versioning.py  workflow.py
jarvishep2/: __init__.py  archive_handoff.py  archiver.py  async_subprocess.py  base.py  calculator_pools.py  client.py  command_parser.py  core.py  dashboard.py  database.py  distributor.py  env_setup.py  factory.py  file_ops.py  inner_func.py  io_json.py  library.py  likelihood.py  log_kv.py  mapper.py  mp_context.py  operas.py  redis_queue.py  runtime_config.py  sample.py  sample_logger.py  task_config.py  worker.py  worker_config.py  workflow.py
jarvishep2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: Func_lib.py  IOs.py  base.py  config.py  core.py  dataconvert.py  distributor.py  factory.py  hdf5writer.py  inner_func.py  jplot.py  library.py  logger.py  logger_old.py  manager.py  module.py  moduleManager.py  modulePool.py  monitor.py  package.py  plot.py  program.py  sample.py  sample_old.py  sampler.py  sampling.py  sampling_old.py  scan.py  slha.py  test.py  tree.py  utils.py  workerFactory.py  workflow.py
src/IOs/: IOs.py  (+3 more)
tests/: conftest.py  test_archiver_handoff.py  test_archiver_parity.py  test_async_subprocess_scheduler.py  test_benchmark_mode.py  test_bridson_import_py313.py  test_bucket_allocator_archive_coordination.py  test_calculator_io_manager.py  test_calculator_runtime_sampleid.py  test_checkpoint_payload_roundtrip.py  test_cli.py  test_cli_entrypoint.py  test_clone_shadow.py  test_command_chain_semantics.py  test_command_parser.py  test_config_validator_schema_block.py  test_core_run_distributed.py  test_csv_sampler.py  test_d0_integration.py  test_dashboard_reader.py  test_dependency_contract.py  test_direct_sampler_checkpoint.py  test_distributed_acceptance.py  test_distributed_resume.py  test_dynesty_pool_adapter.py  test_env_setup.py  test_execution_smoke.py  test_factory_shutdown_summary.py  test_failure_replay_log.py  test_file_ops.py  test_flowchart_jarvisplot_render.py  test_flowchart_semantic_export.py  test_ios_parameter_compat.py  test_layer_concurrency.py  test_lazy_materialization.py  test_library.py  test_likelihood.py  test_log_kv.py  test_logging_layers.py  test_mcmc_state_machine.py  (+28 more)
(+630 files in other folders)
