[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Jarvis-HEP"
version = "1.6.1"
description = "Jarvis-HEP: likelihood-driven HEP scanning framework"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Jarvis-HEP Developers" }
]
dependencies = [
  "aiofiles",
  "dill",
  "emoji",
  "h5py",
  "jsonschema",
  "loguru",
  "matplotlib",
  "networkx",
  "numpy",
  "pandas",
  "prettytable",
  "psutil",
  "pyslha",
  "PyYAML",
  "scipy",
  "setproctitle",
  "Shapely",
  "sympy",
  "torch",
  "tqdm",
  "xmltodict",
  "xslha"
]

[project.scripts]
Jarvis = "jarvishep.client:main"

[project.urls]
Homepage = "https://github.com/Pengxuan-Zhu-Phys/Jarvis-HEP"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvishep*"]
namespaces = true

[tool.setuptools.package-data]
jarvishep = [
  "card/**/*",
  "icons/**/*",
  "Sampling/Source/**/*.py"
]
