[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Jarvis-HEP"
version = "1.6.21"
description = "Jarvis-HEP: likelihood-driven HEP scanning framework"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Jarvis-HEP Developers" }
]
dependencies = [
  "dill>=0.3.8",
  "emoji>=2.10.1",
  "h5py>=3.10",
  "Jarvis-Operas>=1.3.2",
  "Jarvis-HEP-Portal>=1.1.0",
  "jsonschema>=4.0",
  "loguru>=0.7.0",
  "matplotlib>=3.3",
  "mpmath>=1.3.0",
  "networkx>=3.2.1",
  "numpy>=1.18.0",
  "pandas>=2.1.0",
  "Pillow>=10.0.0",
  "prettytable>=3.10.0",
  "psutil>=5.9.0",
  "pyslha>=3.2.5",
  "PyYAML>=5.1",
  "scipy>=1.4.0",
  "setproctitle>=1.3.3",
  "Shapely>=2.0.0",
  "sympy>=1.10.0",
  "torch>=2.0.0",
  "tqdm>=4.0.0",
  "xmltodict>=0.13.0",
  "xslha>=1.0.0"
]

[project.optional-dependencies]
legacy = [
  "dynesty>=2.1.0",
  "pyhf>=0.7",
  "sqlalchemy>=2.0.29"
]

[project.scripts]
Jarvis = "jarvishep.client:main"

[project.urls]
Homepage = "https://github.com/Pengxuan-Zhu-Phys/Jarvis-HEP"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvishep*"]
namespaces = true

[tool.setuptools.package-data]
jarvishep = [
  "card/**/*",
  "icons/**/*",
  "Sampling/Source/**/*.py",
  "project_template/**/*"
]

[tool.setuptools.exclude-package-data]
jarvishep = [
  "*.py[cod]",
  "**/*.py[cod]",
  "__pycache__/*",
  "**/__pycache__/*"
]
